--- a/css animation/effect.html
+++ b/css animation/effect.html
@@ -16,7 +16,63 @@
     }
     header{
         position: absolute;
+        top:0;
+        left:0;
+        z-index: 1000;
+        width: 100%;
+        padding: 30px 200px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    header .logo{
+        font-size: 2em;
+        color: #fff;
+        letter-spacing: 2px;
+        font-weight: 700;
+        text-decoration: none;
+        text-transform: uppercase;
+    }
+    header ul{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    header ul li{
+        list-style: none;
+        margin-left: 20px;
+    }
+    header ul li a{
+        text-decoration: none;
+        padding: 6px 15px;
+        color: #fff;
+        border-radius: 20px;
+        font-family: "Poppins",sans-serif;
+    }
+    header ul li a:hover,
+    header ul li a.active{
+        background: #7597de;
+        color: #2b1055;
     }
 </style>
 </head>
+<header>
+    <!--Logo on left side-->
+    <a href="#" class="logo">蹦蹦糖</a>
+    <!--Navigator-->
+    <ul>
+        <li>
+            <a href="#" class="active">Home</a>
+        </li>
+        <li>
+            <a href="#">About</a>
+        </li>
+        <li>
+            <a href="#">Work</a>
+        </li>
+        <li>
+            <a href="#">Contact</a>
+        </li>
+    </ul>
+</header>
 </html>
